4.61 => 4.62
2024-07-19
Improvment :
- Add New T4 Air Transport for GOK

4.60 => 4.61
2024-05-11
Balance:
 - Totally NEW custom Gaussian damage (NANO BOOST)
 - Nanos can now boost to 500% !!!

4.59 => 4.60
2024-04-14
Balance:
 - Nano boost damage based on now on the Gaussian factor (max single damage chance 55% HP)
 - Nanos can now boost to 450% !!!  (300% before, 180% originally in past)

4.58 => 4.59
2024-04-06
Fix/Balance:
- Fix nano boost damage
- Tweak nano boosts: Nanos can now BUILD boost to 300% (before 180%), REPAIR 200% (before 0%), RECLAIM 180% (before 0%)
- Tweak nano boosts: Less penalty 5.3%hp / sec to 3.8%hp / sec

Improvment :
- Add T7 Core Unit

4.57 => 4.58
2024-03-01
Balance :
- GOK Slanesh: builddistance 566 to 666, buildtime 2250000 to 1950000, workertime 20666 to 66666

4.56 => 4.57
2024-02-26
Balance :
- GOK Slanesh can now Repair, Rezzurect, Reclaim. Worker Speed = 20666, Build Distance = 566

4.55 => 4.56
2024-02-24
Balance :
 - Decrease T4 Jam range 6K=>4K
 - Increase time for morph all commander between T3=>T4 (More time for Rumad faction)
 - Increase timemorph for T2=>T3 Rumad Geo
 - Add Ultimate weapon for Rumad
 - Increase damage for Azarot. MainBeam +25%

 Improvment :
 - Tll T1 copter : Decrease size model

Fix :
 - Rumad T5 Cons can be killed by air
 - Sattelites (PlanetKiller and ThirdEye can be killed by air)
 - Oasis Missiles : Range is respected

4.54 => 4.55
2023-12-28

Balance :
 - Decrease T5 Shield Regen 3K/S => 1.6K/S
 - Decrease T4 Shield Regen 0.3K/S => 0.25K/S
 - Decrease T3 Shield Regen 0.15K/S => 0.125K/S
 - Decrease Mobile T4 Shield Regen 0.25K/S => 0.125K/S
 - All Starburst can target only Surface units

 4.53 => 4.54
2023-12-02

Improvment :
- Add T5 Zeppelin with new electro weapon

Balance :
 - Mongol / Antarion : Decrease range 1300=>1200. Decrease Damage 1400=>1200 / shot
 - Triton : Range 1400=>1200. Damage 360=>600
 - T1/T2 Rumad Medium Tank : Nerf some stats

 4.52 => 4.53
2023-11-19

Balance :