@@ -3,10 +3,10 @@ return {
 		buildangle = 4096,
 		buildcostenergy = 305200000,
 		buildcostmetal = 38387000,
-		builddistance = 50000,
+		builddistance = 40000,
 		builder = true,
 		buildpic = "rumad_parasite.dds",
-		buildtime = 65000000,
+		buildtime = 80000000,
 		canattack = false,
 		canguard = true,
 		canmove = true,
