@@ -2,8 +2,8 @@ return {
 	talon_mcv = {
 		acceleration = 0.005,
 		brakerate = 0.18,
-		buildcostenergy = 1095101,
-		buildcostmetal = 85475,
+		buildcostenergy = 1145100,
+		buildcostmetal = 89475,
 		builder = false,
 		buildpic = "talon_mcv.dds",
 		buildtime = 1000000,
@@ -28,8 +28,8 @@ return {
 		idletime = 1800,
 		losemitheight = 100,
 		maneuverleashlength = 640,
-		mass = 85475,
-		maxdamage = 95485,
+		mass = 89475,
+		maxdamage = 92485,
 		maxslope = 12,
 		maxvelocity = 1,
 		maxwaterdepth = 12,
