@@ -7,8 +7,8 @@ return {
 		bankingAllowed = false,
 		blocking = false,
 		brakerate = 0.01,
-		buildcostenergy = 300300590,
-		buildcostmetal = 30187122,
+		buildcostenergy = 300000000,
+		buildcostmetal = 30187000,
 		builder = false,
 		buildpic = "talon_planetkiller.dds",
 		buildtime = 45000000,
